force-app/main/default/objects/referentielExportDonnesGDPR__c/referentielExportDonnesGDPR__c.object-meta.xml
<CustomObject>
    <description>Objet contenant les règles pour l&apos;exportation des données pour le client (RGPD)</description>
    <label>Référentiel export de données GDPR</label>
    <nameField>
        <displayFormat>RED/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Référentiels export de données GDPR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>