force-app/main/default/objects/referentielExportDonnesGDPR__c/fields/champDeJointure__c.field-meta.xml
<CustomField>
    <fullName>champDeJointure__c</fullName>
    <label>Champ de jointure</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>