force-app/main/default/objects/referentielExportDonnesGDPR__c/fields/champsExclus__c.field-meta.xml
<CustomField>
    <fullName>champsExclus__c</fullName>
    <label>Champs exclus</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>