force-app/main/default/objects/referentielExportDonnesGDPR__c/fields/nomObjet__c.field-meta.xml
<CustomField>
    <fullName>nomObjet__c</fullName>
    <label>Nom de l&apos;objet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>