force-app/main/default/objects/referentielExportDonnesGDPR__c/fields/objetDeJointure__c.field-meta.xml
<CustomField>
    <fullName>objetDeJointure__c</fullName>
    <label>Objet de jointure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>