force-app/main/default/objects/referentielExportDonnesGDPR__c/fields/priorite__c.field-meta.xml
<CustomField>
    <fullName>priorite__c</fullName>
    <label>Priorité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>